--- a/.github/workflows/dockerHub_build.yml
+++ b/.github/workflows/dockerHub_build.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: DevOps_auto_container
+  IMAGE_NAME: devops_auto_container
 
 jobs:
   push_to_registry:
